added submit banner

--- a/src/language-provider/locales/en-us.json
+++ b/src/language-provider/locales/en-us.json
@@ -92,10 +92,10 @@
   "message.was-answered-incorrectly": "was answered incorrectly",
   "message.was-not-registered": "was not registered",
   "message.invalid-email": "E-Mail field requires valid email address",
-  "message.invalid-phone-number": "Phone Number field requires a valid phone number"
+  "message.invalid-phone-number": "Phone Number field requires a valid phone number",
 
-
-
+  "message.submit-successful" : "Your request was sent successfully!",
+  "error.sending-request-failed": "Sorry, we couldn't complete your request. Please try again later."
 
 
 
